--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,6 @@ html {
 }
 img {
   display: block;
-  display: block;
   max-width: 100%;
   height: auto;
 }
@@ -55,36 +54,39 @@ header {
   align-items: center;
 }
 .logo-dark {
-  color: var(--primary-text-color);
   font-family: "Raleway";
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
   letter-spacing: 0.03em;
+
+  color: var(--primary-text-color);
   text-decoration: none;
 
   padding-bottom: 20px;
   padding-top: 20px;
 }
 .logo-light {
-  color: var(--light-text-color);
-  font-family: "Raleway";
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
-  text-decoration: none;
-
   display: block;
   margin-bottom: 20px;
-}
-.accent-logo {
-  color: var(--accent-color);
+
   font-family: "Raleway";
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
   letter-spacing: 0.03em;
+
+  color: var(--light-text-color);
+  text-decoration: none;
+}
+.accent-logo {
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+
+  color: var(--accent-color);
   text-decoration: none;
 }
 .navigation-links {
@@ -98,11 +100,12 @@ header {
   margin: 0;
 }
 .navigation-links .link {
-  color: var(--primary-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  color: var(--primary-text-color);
   text-decoration: none;
   cursor: pointer;
 
@@ -119,23 +122,36 @@ header {
 }
 
 .adress-link-icon {
+  display: inline-flex;
   margin-right: 10px;
+  align-items: center;
+
   fill: var(--secondary-text-color);
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+.adress-link-icon:hover {
+  fill: currentColor;
+}
+
 .link:hover .adress-link-icon,
 .link:focus .adress-link-icon {
   fill: currentColor;
 }
 .adress-links .link {
-  color: var(--secondary-text-color);
+  display: flex;
+  align-items: center;
+
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  color: var(--secondary-text-color);
   text-decoration: none;
   cursor: pointer;
-  display: flex;
-  align-items: center;
 
   transition-property: color;
   transition-duration: 250ms;
@@ -156,7 +172,6 @@ header {
 
 /* promo */
 .promo-section {
-  background-color: var(--background-dark);
   padding-top: 200px;
   padding-bottom: 200px;
 
@@ -166,6 +181,7 @@ header {
   max-width: 1600px;
   height: 600px;
 
+  background-color: var(--background-dark);
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
@@ -176,16 +192,15 @@ header {
 .promo-text {
   width: 696px;
   margin: 0 auto;
-
   margin-bottom: 30px;
-
-  color: var(--light-text-color);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+
+  color: var(--light-text-color);
 }
 .button-main {
   display: block;
@@ -194,13 +209,14 @@ header {
   margin-left: auto;
   margin-right: auto;
 
-  background-color: var(--accent-color);
-  color: var(--light-text-color);
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
+
+  background-color: var(--accent-color);
+  color: var(--light-text-color);
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -208,10 +224,36 @@ header {
   cursor: pointer;
 }
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 528px;
+  height: 581px;
+
+  background-color: var(--light-text-color);
+}
+
 .highlights {
-  background-color: var(--background-primary);
   padding-top: 94px;
   padding-bottom: 94px;
+
+  background-color: var(--background-primary);
 }
 
 .h-icons-class {
@@ -233,19 +275,22 @@ header {
 }
 
 .highlights-main {
+  margin-bottom: 0;
+  margin-top: 0;
+
   font-weight: 700;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  margin-bottom: 0;
-  margin-top: 0;
 }
 .highlights-secondary {
-  color: var(--secondary-text-color);
+  margin-top: 10px;
+  margin-bottom: 0;
+
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  margin-top: 10px;
-  margin-bottom: 0;
+
+  color: var(--secondary-text-color);
 }
 /*projects*/
 .projects-section {
@@ -261,6 +306,28 @@ header {
 }
 .projects-cards:not(:last-child) {
   margin-right: 30px;
+}
+.projects-cards {
+  position: relative;
+}
+
+.project-cards-text {
+  position: absolute;
+  bottom: 0;
+  padding: 27px 82px;
+  margin: 0;
+  height: 70px;
+  width: 100%;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  text-align: center;
+
+  background-color: rgba(47, 48, 58, 0.8);
+  color: var(--light-text-color);
 }
 
 .team-cards {
@@ -280,16 +347,18 @@ header {
 }
 /*team*/
 .team-section {
-  background-color: var(--background-secondary);
   padding-top: 94px;
   padding-bottom: 94px;
+
+  background-color: var(--background-secondary);
 }
 .team-card:not(:last-child) {
   margin-right: 30px;
 }
 .team-card {
-  background-color: var(--background-primary);
   width: 270px;
+
+  background-color: var(--background-primary);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -308,11 +377,12 @@ header {
 }
 .team-secondary-text {
   margin: 0;
-  color: var(--secondary-text-color);
   font-size: 16px;
   line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
+
+  color: var(--secondary-text-color);
 }
 .team-soc-card {
   display: inline-flex;
@@ -337,6 +407,10 @@ header {
   width: 20px;
   height: 20px;
   fill: var(--primary-icon-color);
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .soc-link:hover,
 .soc-link:focus {
@@ -358,14 +432,14 @@ header {
 }
 
 .clients {
+  margin-top: 0;
+  margin-bottom: 50px;
+
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
-
-  margin-top: 0;
-  margin-bottom: 50px;
 }
 .client-link-list {
   display: inline-flex;
@@ -389,7 +463,7 @@ header {
   border-radius: 4px;
 
   transition-property: border;
-  transition-duration: 1000ms;
+  transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-link:hover,
@@ -423,22 +497,23 @@ button {
 }
 
 .button-secondary {
-  background-color: var(--background-secondary);
-  font-family: inherit;
   padding-top: 6px;
   padding-bottom: 6px;
   padding-left: 22px;
   padding-right: 22px;
-  letter-spacing: 0.03em;
 
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
+  font-family: inherit;
+  letter-spacing: 0.03em;
 
   min-width: 73px;
   border-radius: 4px;
   text-align: center;
   cursor: pointer;
+
+  background-color: var(--background-secondary);
 }
 .button-secondary:hover,
 .button-secondary:focus {
@@ -456,37 +531,42 @@ button {
 }
 
 .portfolio-text-main {
-  color: var(--primary-text-color);
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
   padding-top: 20px;
   padding-bottom: 4px;
   padding-left: 24px;
   margin: 0;
+
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+
+  color: var(--primary-text-color);
 }
 .portfolio-text-secondary {
-  color: var(--secondary-text-color);
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.03em;
   margin: 0;
   padding-left: 24px;
   padding-bottom: 20px;
+
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+
+  color: var(--secondary-text-color);
 }
 .portfolio-card-link {
   text-decoration: none;
   cursor: pointer;
 }
 .portfolio-card {
+  margin-bottom: 30px;
+
   width: 370px;
   height: 404px;
   left: 215px;
   top: 262px;
   border: 1px solid #eeeeee;
   box-sizing: border-box;
-  margin-bottom: 30px;
 }
 .portfolio-card:nth-last-child(-n + 3) {
   margin-bottom: 0;
@@ -512,9 +592,10 @@ button {
 
 /*footer*/
 footer {
-  background-color: var(--background-dark);
   padding-top: 60px;
   padding-bottom: 60px;
+
+  background-color: var(--background-dark);
 }
 .container footer {
   display: block;
@@ -523,23 +604,33 @@ footer {
   padding-bottom: 20px;
 }
 .footer-adress-link {
-  color: var(--light-text-color);
   font-size: 14px;
   font-style: normal;
   line-height: 1.71;
   letter-spacing: 0.03em;
   text-decoration: none;
   cursor: pointer;
+
+  color: var(--light-text-color);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-mail-link,
 .footer-number-link {
-  color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
   font-style: normal;
   line-height: 1.71;
   letter-spacing: 0.03em;
   text-decoration: none;
   cursor: pointer;
+
+  color: rgba(255, 255, 255, 0.6);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-list:not(:last-child) {
   margin-bottom: 9px;
@@ -558,26 +649,30 @@ address a:focus {
   margin-left: 70px;
 }
 .join-main {
-  color: var(--light-text-color);
-
   margin-top: 0;
   margin-bottom: 20;
   font-size: 14px;
   line-height: 1.14;
+
+  color: var(--light-text-color);
 
   text-transform: uppercase;
 }
 .footer-soc-card {
   display: flex;
   margin-top: 0;
+
   fill: var(--light-text-color);
 }
 .footer-link-icon {
   width: 20px;
   height: 20px;
+
   fill: var(--light-text-color);
 }
+
 .join .team-soc-item {
   border-radius: 50%;
+
   background-color: var(--dark-icon-background);
 }
