--- a/css/styles.css
+++ b/css/styles.css
@@ -63,8 +63,8 @@ header {
   color: var(--primary-text-color);
   text-decoration: none;
 
-  padding-bottom: 20px;
-  padding-top: 20px;
+  padding-bottom: 25px;
+  padding-top: 25px;
 }
 .logo-light {
   display: block;
@@ -92,6 +92,20 @@ header {
 .navigation-links {
   display: flex;
   margin-left: 93px;
+}
+.link.current {
+  position: relative;
+  padding-bottom: 32px;
+}
+.link.current::after {
+  position: absolute;
+  content: "";
+  display: block;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--accent-color);
 }
 .navigation-links .nav-item {
   margin-right: 50px;
@@ -231,22 +245,48 @@ header {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.1);
+
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
+}
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.9);
 }
 
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
 
   width: 528px;
   height: 581px;
 
   background-color: var(--light-text-color);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-button {
+  position: absolute;
+  right: 8px;
+  top: 8px;
+
+  width: 30px;
+  height: 30px;
+
+  cursor: pointer;
+  background: var(--light-text-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+}
+.modal-svg {
+  position: absolute;
+  bottom: -1px;
+  right: -1px;
 }
 
 .highlights {
@@ -514,6 +554,9 @@ button {
   cursor: pointer;
 
   background-color: var(--background-secondary);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-secondary:hover,
 .button-secondary:focus {
@@ -523,6 +566,38 @@ button {
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 /* project cards*/
+
+.container-portfolio {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay-portfolio {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+
+  padding: 63px 24px;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  text-align: left;
+
+  color: var(--light-text-color);
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-card:hover .overlay-portfolio {
+  transform: translateY(0);
+}
+.overlay-portfolio-text {
+  margin: 0;
+}
 
 .portfolio-cards {
   display: flex;
@@ -557,6 +632,9 @@ button {
 .portfolio-card-link {
   text-decoration: none;
   cursor: pointer;
+}
+.portfolio-card-link > div {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-card {
   margin-bottom: 30px;
