--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ header {
   position: absolute;
   content: "";
   display: block;
-  bottom: 0;
+  bottom: -1px;
   width: 100%;
   height: 4px;
   border-radius: 2px;
@@ -349,24 +349,32 @@ header {
 }
 .projects-cards {
   position: relative;
+  width: 370px;
+  height: 294px;
+}
+
+.project-cards-text-container {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  height: 70px;
+
+  background-color: rgba(47, 48, 58, 0.8);
 }
 
 .project-cards-text {
-  position: absolute;
-  bottom: 0;
-  padding: 27px 82px;
   margin: 0;
-  height: 70px;
-  width: 100%;
 
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  text-align: center;
 
-  background-color: rgba(47, 48, 58, 0.8);
   color: var(--light-text-color);
 }
 
@@ -490,6 +498,7 @@ header {
 }
 .client-icon {
   fill: var(--primary-icon-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-link {
@@ -506,6 +515,7 @@ header {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .client-link:hover,
 .client-link:focus {
   border: 1px solid var(--accent-color);
@@ -592,7 +602,8 @@ button {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-card:hover .overlay-portfolio {
+.portfolio-card:hover .overlay-portfolio,
+.portfolio-card:focus .overlay-portfolio {
   transform: translateY(0);
 }
 .overlay-portfolio-text {
@@ -605,10 +616,11 @@ button {
   justify-content: space-between;
 }
 
+.portfolio-text-container {
+  padding: 24px 20px;
+}
+
 .portfolio-text-main {
-  padding-top: 20px;
-  padding-bottom: 4px;
-  padding-left: 24px;
   margin: 0;
 
   font-weight: 700;
@@ -620,8 +632,6 @@ button {
 }
 .portfolio-text-secondary {
   margin: 0;
-  padding-left: 24px;
-  padding-bottom: 20px;
 
   font-size: 16px;
   line-height: 1.87;
