--- a/css/styles.css
+++ b/css/styles.css
@@ -247,11 +247,13 @@ header {
   background-color: rgba(0, 0, 0, 0.1);
 
   opacity: 1;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
+  visibility: hidden;
 }
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0.9);
@@ -602,8 +604,8 @@ button {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-card:hover .overlay-portfolio,
-.portfolio-card:focus .overlay-portfolio {
+.portfolio-card-link:hover .overlay-portfolio,
+.portfolio-card-link:focus .overlay-portfolio {
   transform: translateY(0);
 }
 .overlay-portfolio-text {
@@ -617,7 +619,7 @@ button {
 }
 
 .portfolio-text-container {
-  padding: 24px 20px;
+  padding: 23px 20px;
 }
 
 .portfolio-text-main {
@@ -639,13 +641,7 @@ button {
 
   color: var(--secondary-text-color);
 }
-.portfolio-card-link {
-  text-decoration: none;
-  cursor: pointer;
-}
-.portfolio-card-link > div {
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+
 .portfolio-card {
   margin-bottom: 30px;
 
@@ -659,8 +655,16 @@ button {
 .portfolio-card:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
-.portfolio-card-link:hover > div,
-.portfolio-card-link:focus > div {
+.portfolio-card-link {
+  display: block;
+  text-decoration: none;
+  cursor: pointer;
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-card-link:hover,
+.portfolio-card-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
